# Text-processing

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
config/: main.yaml
config/model/: model1.yaml
config/process/: process1.yaml
data/final/: metrics.csv
data/processed/: train.parquet  val.parquet
data/raw/: train.parquet  val.parquet
docs/: src.md
models/: model.pkl
notebooks/: Download Data.ipynb
src/: load_data.py  metrics.py  process.py  train_model.py
